# GeminiHs

./: .gitignore  GeminiServer.cabal  TODO.md  create-certificate.ps1  todo.md
app/: Args.hs  Cert.hs  Class.hs  Config.hs  Data.hs  DefaultDocumentHandler.hs  Dir.hs  Exception.hs  FileSystemHandler.hs  Gemini.hs  Handler.hs  Main.hs  Mime.hs  Net.hs  NotFoundHandler.hs  Router.hs
config/: test-tls.ps1
gemini/: home.gmi  test.txt
gemini/folder/: index.gmi
site/: config.yml  create-certificate.ps1
