cabal-version:      2.4
name:               GeminiServer
version:            0.1.0.0

author:             Bim Sherwood
maintainer:         bimmosherwood@gmail.com

executable GeminiServer
    main-is:          Main.hs
    other-modules:    Net
    build-depends:    base >=4.15.0.0 && <4.16.0,
                      data-default-class,
                      x509,
                      x509-store,
                      tls,
                      network-simple-tls
    hs-source-dirs:   app
    default-language: Haskell2010
