cabal-version:      2.4
name:               GeminiServer
version:            0.1.0.0

author:             Bim Sherwood
maintainer:         bimmosherwood@gmail.com

executable GeminiServer
    main-is:          Main.hs
    other-modules:    Cert,
                      Config,
                      Data,
                      FileSystemHandler,
                      Handler,
                      Net,
                      Router
    build-depends:    base >=4.15.0.0,
                      data-default-class,
                      directory,
                      network-simple-tls,
                      split,
                      tls,
                      x509,
                      x509-store
    hs-source-dirs:   app
    default-language: Haskell2010
