cabal-version:      2.4
name:               GeminiServer
version:            0.1.0.0

author:             Bim Sherwood
maintainer:         bimmosherwood@gmail.com

executable GeminiServer
    main-is:          Main.hs
    other-modules:    Cert,
                      Config,
                      FileSystemHandler,
                      Gemini,
                      Handler,
                      Net,
                      NotFoundHandler
    build-depends:    base >=4.15.0.0,
                      bytestring,
                      data-default-class,
                      directory,
                      network-uri,
                      network-simple-tls,
                      split,
                      tls,
                      utf8-string,
                      x509,
                      x509-store
    hs-source-dirs:   app
    default-language: Haskell2010
